--- a/resume.tex
+++ b/resume.tex
@@ -7,9 +7,9 @@
 \begin{rSection}{Technical Skills}
 
     \begin{itemize}
-        \item Languages/Tools: \textbf{Python}, \textbf{Java}, \textbf{C++}, SQL, R \textbar\ Git, Docker, \textbf{CUDA}, AWS, Apache Kafka, Kubernetes.
+        \item Languages/Tools: \textbf{Python}, \textbf{C++}, SQL, R \textbar\ Git, Docker, CUDA, AWS, Apache Kafka, Kubernetes.
               % \item Languages/Tools: Python, C++, Java, JavaScript, HTML, CSS, R, SQL.
-        \item Machine Learning Libraries: NumPy, SciPy, pandas, \textbf{TensorFlow}, PyTorch, Caffe, scikit-learn, OpenCV.
+        \item AI/ML Libraries: \textbf{NumPy}, \textbf{TensorFlow}, \textbf{PyTorch}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy, pandas.
     \end{itemize}
 
 \end{rSection}
@@ -18,19 +18,19 @@
 
     \begin{rSubsection}{NVIDIA Corporation}{January 2022 \(-\) April 2022 \(\cdot\) 4 mos}
         {Computer Vision Engineer - Autonomous Vehicles}{Santa Clara, CA, United States (Remote)}
-        \item Defined a clear \textbf{data exportation workflow} and enabled relevant teams to create clean datasets for model development
+        \item Defined a new \textbf{data input pipeline} and enabled relevant teams to create clean datasets for model development
         and comparison between different versions.
-        \item Implemented cyclical learning rate schedules, over/undersampling mechanisms, and refactored code for model definition
-        to enable more robust fine-tuning process.
-        \item Improved the \(\boldsymbol{F_{1}}\)\textbf{-score} of a traffic light \textbf{classification} model by around \textbf{1\%} on \textbf{end-to-end KPI} test sets
-        by fine-tuning from thousands of training experiments.
-        \item Improved training methodologies and \textbf{reduced training time} from around 20h to around 3h.
-        \item Fixed memory, latency, and performance \textbf{tests} for multiple classifier nodes on different platforms and generated \textbf{reports} for other teams to review.
+        \item \textbf{Software implementation} of cyclical learning rate schedules, over/undersampling mechanisms, and \textbf{refactored code} for model definition
+        to enable more robust and flexible fine-tuning process.
+        \item \textbf{Improved \(\boldsymbol{F_{1}}\)-score} of a traffic light classification model by around \textbf{1\%} on \textbf{end-to-end KPI} test sets
+        by fine-tuning from thousands of experiments.
+        \item \textbf{Stabilized the training process} and \textbf{reduced training time} from around 20h to around 3h with improved training methodologies.
+        \item Fixed memory, latency, and \textbf{performance tests} for multiple classifier nodes on different platforms and generated \textbf{performance reports} for the AV infra team.
     \end{rSubsection}
 
-    \begin{rSubsection}{MIND Technologies Inc}{May 2021 \(-\) August 2021 \(\cdot\) 4 mos}
-        {Machine Learning Engineer}{The Woodlands, TX, United States (Remote)}
-        \item Generated \textbf{synthetic data} of lobster pots to \textbf{pretrain} the RetinaNet model.
+    \begin{rSubsection}{MIND Technology, Inc.}{May 2021 \(-\) August 2021 \(\cdot\) 4 mos}
+        {Machine Learning Engineer - Object Detection}{The Woodlands, TX, United States (Remote)}
+        \item Generated \textbf{synthetic data} of lobster pots for \textbf{pretraining} the \textbf{RetinaNet} model.
         \item \textbf{Transferred} a RetinaNet \textbf{object detection} model
         from the COCO 2017 dataset to sonar signals of underwater lobster pots.
         \item Fine-tuned the feature pyramid architecture and achieved \textbf{near 1.0 confidence} on synthetic data.
@@ -39,40 +39,34 @@
         and profiled the usages.
     \end{rSubsection}
 
+\end{rSection}
+
+\begin{rSection}{Research Experiences}
+
     \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) August 2022 \(\cdot\) 4 mos}
         {Undergraduate Research Assistant}{Waterloo, ON, Canada}
-        \item Proposed and proved a \textbf{closed form formula} for \textbf{projection} onto intersection of a closed affine subspace and a hyperplane in a Hilbert space.
-        \item Implemented numerical experiments to verify the correctness of our results
-        and empirically showed that \textbf{alternating projection methods} using the new formula \textbf{converges faster}.
         \item Preprint: \href{https://arxiv.org/abs/2206.11373}
         {Bauschke, Heinz H., Dayou Mao, and Walaa M. Moursi. ``How to project onto the intersection of a closed affine subspace and a hyperplane.'' \textit{arXiv preprint arXiv:2206.11373} (2022)}.
+        \item Proposed and proved a \textbf{closed form formula} for \textbf{projection operations} onto the intersection of a closed affine subspace and a hyperplane in the context of Hilbert spaces.
+        \item Implemented \textbf{numerical experiments} to verify the correctness of our results
+        and empirically demonstrated that alternating projection algorithms with the new formula \textbf{converge faster}.
     \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Projects}
 
-    \begin{rSubsection}{MedTechResolve Student Design Team}{March 2022 - Present}
-        {Software Engineering Team Lead}{Waterloo, ON, Canada}
-        \item Leading \textbf{computer vision research} on deep learning solutions to \textbf{lung cancer segmentation}.
-        \item Leading the \textbf{frontend} and \textbf{backend} teams for developing a triage server, our official website, and an internal human resource management tool.
+    \begin{rSubsection}{MedTechResolve Student Design Team}{March 2022 - Present}{}{}
+        \item Leading the \textbf{computer vision R\&D} team on various biomedical engineering projects.
     \end{rSubsection}
 
-    \begin{rSubsection}{Computer Vision Knowledge Base}{January 2021 - Present}{}{}
-        \item Developing a code base for computer vision, including common \textbf{CNN}, \textbf{transformer}, and \textbf{GAN} architectures
-        and \textbf{classification}, \textbf{detection}, and \textbf{segmentation} frameworks in TensorFlow.
+    \begin{rSubsection}{Machine Learning Knowledge Base}{January 2021 - Present}{}{}
+        \item \href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub}
+        Production-level implementation of data input, model training, and model evaluation pipelines for
+        \textbf{classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
+        \item \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
+        Collection of papers and notes in ML with a focus on \textbf{CNN}, \textbf{Transformer}, and \textbf{GAN} architectures.
     \end{rSubsection}
-
-    % \begin{rSubsection}{Stock Trading Bot}{June 2021 - August 2021}{}{}
-    %     \item Implemented a stock trading bot based on the \textbf{deep Q-learning} algorithm.
-    %     % \item Created a \textbf{data pipeline} to \textbf{scrape} data from yahoo finance and preprocess the data.
-    % \end{rSubsection}
-
-    % \begin{rSubsection}{Sentiment Analysis}{September 2020}{}{}
-    %     \item Developed classification models on twitter posts labelled  `positive' or `negative'.
-    %     \item Preprocessed data by removing \textbf{punctuations} and \textbf{stop words} and \textbf{lemmatizing} words.
-    %     \item Experimented and compared the \textbf{naive Bayes}, \textbf{logistic regression}, and \textbf{LSTM} models.
-    % \end{rSubsection}
 
 \end{rSection}
 
