--- a/resume.tex
+++ b/resume.tex
@@ -7,47 +7,47 @@
 \begin{rSection}{Technical Skills}
 
     \begin{itemize}
-        \item Languages/Tools: \textbf{Python}, \textbf{C++}, SQL, R \textbar\ Git, Docker, CUDA, AWS, Apache Kafka, Kubernetes.
+        \item Languages/Tools: \textbf{Python}, \textbf{C++}, \textbf{CUDA}, \textbf{Java}, SQL \textbar\ Git, Docker, AWS, Apache Kafka, Kubernetes.
               % \item Languages/Tools: Python, C++, Java, JavaScript, HTML, CSS, R, SQL.
-        \item AI/ML Libraries: \textbf{NumPy}, \textbf{TensorFlow}, \textbf{PyTorch}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy, pandas.
+        \item AI/ML Libraries: \textbf{NumPy}, \textbf{TensorFlow}, \textbf{PyTorch}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy.
     \end{itemize}
 
 \end{rSection}
 
 \begin{rSection}{Work Experiences}
 
-    \begin{rSubsection}{NVIDIA Corporation}{January 2022 \(-\) April 2022 \(\cdot\) 4 mos}
+    \begin{rSubsection}{NVIDIA Corporation}{Jan 2022 \(-\) Apr 2022 \(\cdot\) 4 mos}
         {Computer Vision Engineer - Autonomous Vehicles}{Santa Clara, CA, United States (Remote)}
-        \item Defined a new \textbf{data input pipeline} and enabled relevant teams to create clean datasets for model development
-        and comparison between different versions.
-        \item \textbf{Software implementation} of cyclical learning rate schedules, over/undersampling mechanisms, and \textbf{refactored code} for model definition
-        to enable more robust and flexible fine-tuning process.
-        \item \textbf{Improved \(\boldsymbol{F_{1}}\)-score} of a traffic light classification model by around \textbf{1\%} on \textbf{end-to-end KPI} test sets
-        by fine-tuning from thousands of experiments.
-        \item \textbf{Stabilized the training process} and \textbf{reduced training time} from around 20h to around 3h with improved training methodologies.
-        \item Fixed memory, latency, and \textbf{performance tests} for multiple classifier nodes on different platforms and generated \textbf{performance reports} for the AV infra team.
+        \item Created new \textbf{data input pipeline} to define clean datasets for model development and comparison.
+        \item Enabled more \textbf{robust training experiments} with more learning rate schedules, sampling mechanisms, and by refactoring model definition.
+        \item \textbf{Stabilized the training process} and \textbf{reduced training time} from \(\sim\)20h to \(\sim\)3h to significantly speed up model development.
+        \item \textbf{Improved \(\boldsymbol{F_{1}}\)-score} of a traffic light classification model by \(\sim\)\textbf{1\%} on \textbf{end-to-end KPI} test sets by hyperparameter searching from 1000+ experiments.
+        \item Debugged memory, latency, and \textbf{performance tests} for multiple classifier nodes on different platforms.
+        % and generated performance \textbf{reports} for the AV infra team.
     \end{rSubsection}
 
-    \begin{rSubsection}{MIND Technology, Inc.}{May 2021 \(-\) August 2021 \(\cdot\) 4 mos}
+    \begin{rSubsection}{MIND Technology, Inc.}{May 2021 \(-\) Aug 2021 \(\cdot\) 4 mos}
         {Machine Learning Engineer - Object Detection}{The Woodlands, TX, United States (Remote)}
-        \item Generated \textbf{synthetic data} of lobster pots for \textbf{pretraining} the \textbf{RetinaNet} model.
-        \item \textbf{Transferred} a RetinaNet \textbf{object detection} model
-        from the COCO 2017 dataset to sonar signals of underwater lobster pots.
-        \item Fine-tuned the feature pyramid architecture and achieved \textbf{near 1.0 confidence} on synthetic data.
-        \item Deployed the model onto \textbf{Google Edge TPU} using TensorFlow Lite
-        and \textbf{NVIDIA Jetson Nano} using TensorRT,
-        and profiled the usages.
+        \item Generated \textbf{synthetic data} of lobster pots, human bodies, and mines for \textbf{pretraining} our model.
+        \item Achieved \textbf{near 1.0 confidence} on synthetic data after fine-tuning the network topology.
+        \item \textbf{Transfer learning} of our RetinaNet model from the COCO 2017 dataset to our domain.
+        \item Deployed the model onto Google Edge TPU with \textbf{TensorFlow Lite} and NVIDIA Jetson Nano with\\
+        \textbf{TensorRT} and profiled the usages.
     \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Research Experiences}
 
-    \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) August 2022 \(\cdot\) 4 mos}
+    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 1 mo}
+        {Undergraduate Research Assistant}{Waterloo, ON, Canada}
+        \item Error analysis by \textbf{variance of gradient} to identify \textbf{hard training examples}.
+    \end{rSubsection}
+
+    \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) Aug 2022 \(\cdot\) 4 mos}
         {Undergraduate Research Assistant}{Waterloo, ON, Canada}
         \item Preprint: \href{https://arxiv.org/abs/2206.11373}
         {Bauschke, Heinz H., Dayou Mao, and Walaa M. Moursi. ``How to project onto the intersection of a closed affine subspace and a hyperplane.'' \textit{arXiv preprint arXiv:2206.11373} (2022)}.
-        \item Proposed and proved a \textbf{closed form formula} for \textbf{projection operations} onto the intersection of a closed affine subspace and a hyperplane in the context of Hilbert spaces.
         \item Implemented \textbf{numerical experiments} to verify the correctness of our results
         and empirically demonstrated that alternating projection algorithms with the new formula \textbf{converge faster}.
     \end{rSubsection}
@@ -56,14 +56,14 @@
 
 \begin{rSection}{Projects}
 
-    \begin{rSubsection}{MedTechResolve Student Design Team}{March 2022 - Present}{}{}
-        \item Leading the \textbf{computer vision R\&D} team on various biomedical engineering projects.
+    \begin{rSubsection}{MedTechResolve Student Design Team}{Mar 2022 - Present \(\cdot\) 11 mos}{}{}
+        \item \textbf{Team lead} of the computer vision R\&D team on biomedical engineering and HCI related projects.
     \end{rSubsection}
 
-    \begin{rSubsection}{Machine Learning Knowledge Base}{January 2021 - Present}{}{}
+    \begin{rSubsection}{Computer Vision Code Base}{Jan 2021 - Present \(\cdot\) 2 yrs 1 mo}{}{}
         \item \href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub}
-        Production-level implementation of data input, model training, and model evaluation pipelines for
-        \textbf{classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
+        Production-level implementation of \textbf{data input}, model \textbf{training}, and model \textbf{evaluation} pipelines for
+        \textbf{image classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
         \item \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
         Collection of papers and notes in ML with a focus on \textbf{CNN}, \textbf{Transformer}, and \textbf{GAN} architectures.
     \end{rSubsection}
@@ -72,7 +72,7 @@
 
 \begin{rSection}{Education}
 
-    \begin{rSubsection}{University of Waterloo, Canada}{September 2019 - Present}{}{}
+    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 - Present}{}{}
         \item Triple major in \textbf{Computer Science}, \textbf{Statistics}, and \textbf{Optimization} with faculty average 93.46\%.
         % \item Relevant courses: machine learning, computational vision, algorithms, operating systems,
     \end{rSubsection}
