--- a/resume.tex
+++ b/resume.tex
@@ -8,72 +8,68 @@
 
     \begin{itemize}
         \item Languages/Tools: \textbf{Python}, \textbf{C++}, \textbf{CUDA}, \textbf{Java}, SQL \textbar\ Git, Docker, AWS, Apache Kafka, Kubernetes.
-              % \item Languages/Tools: Python, C++, Java, JavaScript, HTML, CSS, R, SQL.
-        \item AI/ML Libraries: \textbf{NumPy}, \textbf{TensorFlow}, \textbf{PyTorch}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy.
+        \item ML Libraries: \textbf{NumPy}, \textbf{PyTorch}, \textbf{TensorFlow}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy.
     \end{itemize}
 
 \end{rSection}
 
 \begin{rSection}{Work Experiences}
 
+    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 4 mos}
+        {Research Assistant - Computer Vision}{Waterloo, ON, Canada}
+        \item Research on \textbf{multi-task learning} and identification of hard features.
+        \item Research on \textbf{explainable AI} for autonomous vehicles and report to Transport Canada.
+        \item Research on copyright detection for \textbf{GAN} and \textbf{diffusion} models.
+    \end{rSubsection}
+
+    \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) Aug 2022 \(\cdot\) 4 mos}
+        {Research Assistant - Optimization}{Waterloo, ON, Canada}
+        \item We proposed a novel formula for projection operations with theoretical proof of correctness and empirical results demonstrating the acceleration it brings to the class of alternating projection algorithms.
+        \item Preprint: \href{https://arxiv.org/abs/2206.11373}{Bauschke, Heinz H., Dayou Mao, and Walaa M. Moursi. ``How to project onto the intersection of a closed affine subspace and a hyperplane.'' \textit{arXiv preprint arXiv:2206.11373} (2022)}.
+    \end{rSubsection}
+
     \begin{rSubsection}{NVIDIA Corporation}{Jan 2022 \(-\) Apr 2022 \(\cdot\) 4 mos}
         {Computer Vision Engineer - Autonomous Vehicles}{Santa Clara, CA, United States (Remote)}
-        \item Created new \textbf{data input pipeline} to define clean datasets for model development and comparison.
-        \item Enabled more \textbf{robust training experiments} with more learning rate schedules, sampling mechanisms, and by refactoring model definition.
-        \item \textbf{Stabilized the training process} and \textbf{reduced training time} from \(\sim\)20h to \(\sim\)3h to significantly speed up model development.
+        \item Implemented new \textbf{data pipeline} to create clean datasets for model development and comparison.
+        \item Enriched \textbf{training pipeline} by implementing and testing more learning rate schedules, sampling mechanisms, and refactoring code for neural network implementation.
+        \item Proposed improvements on training config and \textbf{stabilized the training process} and \textbf{reduced training time} from \(\sim\)20h to \(\sim\)3h. Significantly sped up model development.
         \item \textbf{Improved \(\boldsymbol{F_{1}}\)-score} of a traffic light classification model by \(\sim\)\textbf{1\%} on \textbf{end-to-end KPI} test sets by hyperparameter searching from 1000+ experiments.
         \item Debugged memory, latency, and \textbf{performance tests} for multiple classifier nodes on different platforms.
-        % and generated performance \textbf{reports} for the AV infra team.
     \end{rSubsection}
 
     \begin{rSubsection}{MIND Technology, Inc.}{May 2021 \(-\) Aug 2021 \(\cdot\) 4 mos}
         {Machine Learning Engineer - Object Detection}{The Woodlands, TX, United States (Remote)}
-        \item Generated \textbf{synthetic data} of lobster pots, human bodies, and mines for \textbf{pretraining} our model.
-        \item Achieved \textbf{near 1.0 confidence} on synthetic data after fine-tuning the network topology.
-        \item \textbf{Transfer learning} of our RetinaNet model from the COCO 2017 dataset to our domain.
-        \item Deployed the model onto Google Edge TPU with \textbf{TensorFlow Lite} and NVIDIA Jetson Nano with\\
-        \textbf{TensorRT} and profiled the usages.
-    \end{rSubsection}
-
-\end{rSection}
-
-\begin{rSection}{Research Experiences}
-
-    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 1 mo}
-        {Undergraduate Research Assistant}{Waterloo, ON, Canada}
-        \item Error analysis by \textbf{variance of gradient} to identify \textbf{hard training examples}.
-    \end{rSubsection}
-
-    \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) Aug 2022 \(\cdot\) 4 mos}
-        {Undergraduate Research Assistant}{Waterloo, ON, Canada}
-        \item Preprint: \href{https://arxiv.org/abs/2206.11373}
-        {Bauschke, Heinz H., Dayou Mao, and Walaa M. Moursi. ``How to project onto the intersection of a closed affine subspace and a hyperplane.'' \textit{arXiv preprint arXiv:2206.11373} (2022)}.
-        \item Implemented \textbf{numerical experiments} to verify the correctness of our results
-        and empirically demonstrated that alternating projection algorithms with the new formula \textbf{converge faster}.
+        \item Generated \textbf{synthetic data} of lobster pots, human bodies, and mines for \textbf{model pretraining}.
+        \item Achieved \textbf{near 1.0 confidence} on synthetic data after fine-tuning the network topology and weights from a \textbf{RetinaNet} trained on MS COCO dataset.
+        \item Researched on deployment onto Google Edge TPU with \textbf{TensorFlow Lite} and NVIDIA Jetson Nano with \textbf{TensorRT}, and profiled the usages.
     \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Projects}
 
-    \begin{rSubsection}{MedTechResolve Student Design Team}{Mar 2022 - Present \(\cdot\) 11 mos}{}{}
-        \item \textbf{Team lead} of the computer vision R\&D team on biomedical engineering and HCI related projects.
-    \end{rSubsection}
+    % \begin{rSubsection}{MedTechResolve Student Design Team}{Mar 2022 - Present \(\cdot\) 11 mos}{}{}
+    %     \item \textbf{Team lead} of the computer vision R\&D team on biomedical engineering and HCI related projects.
+    % \end{rSubsection}
 
-    \begin{rSubsection}{Computer Vision Code Base}{Jan 2021 - Present \(\cdot\) 2 yrs 1 mo}{}{}
-        \item \href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub}
-        Production-level implementation of \textbf{data input}, model \textbf{training}, and model \textbf{evaluation} pipelines for
-        \textbf{image classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
-        \item \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
-        Collection of papers and notes in ML with a focus on \textbf{CNN}, \textbf{Transformer}, and \textbf{GAN} architectures.
+    \begin{rSubsection}{Computer Vision Code Base
+            (\href{https://github.com/danielmao2019/Computer-Vision-PyTorch}{\faGithub PyTorch})
+            (\href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub TensorFlow})
+        }{Jan 2021 - Present \(\cdot\) 2 yrs 4 mos}{}{}
+        \item Production-level implementation of \textbf{data input}, model \textbf{training}, model \textbf{evaluation} pipelines and well-known models for \textbf{image classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
+    \end{rSubsection}
+    \begin{rSubsection}{Machine Learning Knowledge Base
+            \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
+        }{Jan 2021 - Present \(\cdot\) 2 yrs 4 mos}{}{}
+        \item Compilation of papers and notes in machine learning with a focus on \textbf{CNN}, \textbf{Transformer}, \textbf{GAN}, and \textbf{diffusion models}. Other topics include \textbf{multi-task learning}, \textbf{XAI}, and \textbf{NERF}.
     \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Education}
 
-    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 - Present}{}{}
-        \item Triple major in \textbf{Computer Science}, \textbf{Statistics}, and \textbf{Optimization} with faculty average 93.46\%.
+    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 - Present \(\cdot\) 3 yrs 8 mos}{}{}
+        \item Triple major in \textbf{Computer Science}, \textbf{Statistics}, and \textbf{Optimization} with faculty average \(\sim\)93\%.
         % \item Relevant courses: machine learning, computational vision, algorithms, operating systems,
     \end{rSubsection}
 
