--- a/resume.tex
+++ b/resume.tex
@@ -7,19 +7,19 @@
 \begin{rSection}{Technical Skills}
 
     \begin{itemize}
-        \item Languages/Tools: \textbf{Python}, \textbf{C++}, \textbf{CUDA}, \textbf{Java}, SQL \textbar\ Git, Docker, AWS, Apache Kafka, Kubernetes.
-        \item ML Libraries: \textbf{NumPy}, \textbf{PyTorch}, \textbf{TensorFlow}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy.
+        \item Languages/Tools: \textbf{Python}, \textbf{C++}, \textbf{CUDA}, \textbf{Vulkan}, \textbf{SQL} \textbar\ Git, Docker, Kubernetes.
+        \item ML Libraries: \textbf{NumPy}, \textbf{PyTorch}, \textbf{TensorFlow}, \textbf{PIL}, scikit-learn, OpenCV, Matplotlib, Caffe, SciPy.
     \end{itemize}
 
 \end{rSection}
 
 \begin{rSection}{Work Experiences}
 
-    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 4 mos}
+    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 5 mos}
         {Research Assistant - Computer Vision}{Waterloo, ON, Canada}
-        \item Research on \textbf{multi-task learning} and identification of hard features.
-        \item Research on \textbf{explainable AI} for autonomous vehicles and report to Transport Canada.
-        \item Research on copyright detection for \textbf{GAN} and \textbf{diffusion} models.
+        \item Researched on \textbf{explainable AI} for \textbf{autonomous vehicles} and reported to Transport Canada.
+        \item Researching on \textbf{digital forgery detection} for \textbf{diffusion/GAN/Transformer}-based generative models.
+        \item Researching on \textbf{multi-task learning} and identification of hard features.
     \end{rSubsection}
 
     \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) Aug 2022 \(\cdot\) 4 mos}
@@ -55,12 +55,12 @@
     \begin{rSubsection}{Computer Vision Code Base
             (\href{https://github.com/danielmao2019/Computer-Vision-PyTorch}{\faGithub PyTorch})
             (\href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub TensorFlow})
-        }{Jan 2021 - Present \(\cdot\) 2 yrs 4 mos}{}{}
+        }{Jan 2021 - Present \(\cdot\) 2 yrs 5 mos}{}{}
         \item Production-level implementation of \textbf{data input}, model \textbf{training}, model \textbf{evaluation} pipelines and well-known models for \textbf{image classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
     \end{rSubsection}
     \begin{rSubsection}{Machine Learning Knowledge Base
             \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
-        }{Jan 2021 - Present \(\cdot\) 2 yrs 4 mos}{}{}
+        }{Jan 2021 - Present \(\cdot\) 2 yrs 5 mos}{}{}
         \item Compilation of papers and notes in machine learning with a focus on \textbf{CNN}, \textbf{Transformer}, \textbf{GAN}, and \textbf{diffusion models}. Other topics include \textbf{multi-task learning}, \textbf{XAI}, and \textbf{NERF}.
     \end{rSubsection}
 
@@ -68,7 +68,7 @@
 
 \begin{rSection}{Education}
 
-    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 - Present \(\cdot\) 3 yrs 8 mos}{}{}
+    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 - Present \(\cdot\) 3 yrs 9 mos}{}{}
         \item Triple major in \textbf{Computer Science}, \textbf{Statistics}, and \textbf{Optimization} with faculty average \(\sim\)93\%.
         % \item Relevant courses: machine learning, computational vision, algorithms, operating systems,
     \end{rSubsection}
