--- a/resume.tex
+++ b/resume.tex
@@ -4,6 +4,13 @@
 
 \begin{document}
 
+\begin{rSection}{Publications}
+    \begin{itemize}
+        \item Aboutalebi, H., Mao, D., Xu, C., \& Wong, A. (2023). DeepfakeArt Challenge: A Benchmark Dataset for Generative AI Art Forgery and Data Poisoning Detection. \href{https://arxiv.org/abs/2306.01272}{\textit{arXiv preprint arXiv:2306.01272}}.
+        \item Bauschke, H. H., Mao, D., \& Moursi, W. M. (2022). How to project onto the intersection of a closed affine subspace and a hyperplane. \href{https://arxiv.org/abs/2206.11373}{\textit{arXiv preprint arXiv:2206.11373}}.
+    \end{itemize}
+\end{rSection}
+
 \begin{rSection}{Technical Skills}
 
     \begin{itemize}
@@ -13,19 +20,14 @@
 
 \end{rSection}
 
-\begin{rSection}{Work Experiences}
+\begin{rSection}{Work/Research Experiences}
 
-    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 5 mos}
+    \begin{rSubsection}{Vision and Image Processing Lab}{Jan 2023 \(-\) Present \(\cdot\) 6 mos}
         {Research Assistant - Computer Vision}{Waterloo, ON, Canada}
-        \item Researched on \textbf{explainable AI} for \textbf{autonomous vehicles} and reported to Transport Canada.
-        \item Researching on \textbf{digital forgery detection} for \textbf{diffusion/GAN/Transformer}-based generative models.
-        \item Researching on \textbf{multi-task learning} and identification of hard features.
-    \end{rSubsection}
-
-    \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) Aug 2022 \(\cdot\) 4 mos}
-        {Research Assistant - Optimization}{Waterloo, ON, Canada}
-        \item We proposed a novel formula for projection operations with theoretical proof of correctness and empirical results demonstrating the acceleration it brings to the class of alternating projection algorithms.
-        \item Preprint: \href{https://arxiv.org/abs/2206.11373}{Bauschke, Heinz H., Dayou Mao, and Walaa M. Moursi. ``How to project onto the intersection of a closed affine subspace and a hyperplane.'' \textit{arXiv preprint arXiv:2206.11373} (2022)}.
+        \item Literature review of \textbf{explainable AI} for \textbf{autonomous vehicles} and reported to Transport Canada.
+        \item Create benchmark dataset on \textbf{generative AI} art forgery and data poisoning detection.
+        \item Supervising a small team of undergrads on research on \textbf{image retrieval} algorithms.
+        \item Ongoing research on \textbf{multi-task learning} for robotics grasping.
     \end{rSubsection}
 
     \begin{rSubsection}{NVIDIA Corporation}{Jan 2022 \(-\) Apr 2022 \(\cdot\) 4 mos}
@@ -44,31 +46,41 @@
         \item Researched on deployment onto Google Edge TPU with \textbf{TensorFlow Lite} and NVIDIA Jetson Nano with \textbf{TensorRT}, and profiled the usages.
     \end{rSubsection}
 
-\end{rSection}
-
-\begin{rSection}{Projects}
-
-    % \begin{rSubsection}{MedTechResolve Student Design Team}{Mar 2022 - Present \(\cdot\) 11 mos}{}{}
-    %     \item \textbf{Team lead} of the computer vision R\&D team on biomedical engineering and HCI related projects.
-    % \end{rSubsection}
-
-    \begin{rSubsection}{Computer Vision Code Base
-            (\href{https://github.com/danielmao2019/Computer-Vision-PyTorch}{\faGithub PyTorch})
-            (\href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub TensorFlow})
-        }{Jan 2021 - Present \(\cdot\) 2 yrs 5 mos}{}{}
-        \item Production-level implementation of \textbf{data input}, model \textbf{training}, model \textbf{evaluation} pipelines and well-known models for \textbf{image classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
+    \begin{rSubsection}{CoreAVI}{May 2023 \(-\) Present \(\cdot\) 2 mos}
+        {Machine Learning Software Engineer - GPU Programming}{Waterloo, ON, Canada}
+        \item Developing our neural networks \textbf{GPU inference engine} for safety critical applications in avionics.
     \end{rSubsection}
-    \begin{rSubsection}{Machine Learning Knowledge Base
-            \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
-        }{Jan 2021 - Present \(\cdot\) 2 yrs 5 mos}{}{}
-        \item Compilation of papers and notes in machine learning with a focus on \textbf{CNN}, \textbf{Transformer}, \textbf{GAN}, and \textbf{diffusion models}. Other topics include \textbf{multi-task learning}, \textbf{XAI}, and \textbf{NERF}.
+
+    \begin{rSubsection}{University of Waterloo}{May 2022 \(-\) Aug 2022 \(\cdot\) 4 mos}
+        {Research Assistant - Optimization}{Waterloo, ON, Canada}
+        \item We proposed a novel formula for projection operations with theoretical proof of correctness and empirical results demonstrating the acceleration it brings to the class of alternating projection algorithms.
     \end{rSubsection}
 
 \end{rSection}
+
+% \begin{rSection}{Projects}
+
+%     % \begin{rSubsection}{MedTechResolve Student Design Team}{Mar 2022 - Present \(\cdot\) 11 mos}{}{}
+%     %     \item \textbf{Team lead} of the computer vision R\&D team on biomedical engineering and HCI related projects.
+%     % \end{rSubsection}
+
+%     \begin{rSubsection}{Computer Vision Code Base
+%             (\href{https://github.com/danielmao2019/Computer-Vision-PyTorch}{\faGithub PyTorch})
+%             (\href{https://github.com/danielmao2019/Computer-Vision-TensorFlow}{\faGithub TensorFlow})
+%         }{Jan 2021 \(-\) Present \(\cdot\) 2 yrs 6 mos}{}{}
+%         \item Production-level implementation of \textbf{data input}, model \textbf{training}, model \textbf{evaluation} pipelines and well-known models for \textbf{image classification}, \textbf{object detection}, and \textbf{semantic segmentation} tasks.
+%     \end{rSubsection}
+%     \begin{rSubsection}{Machine Learning Knowledge Base
+%             \href{https://github.com/danielmao2019/Machine-Learning-Knowledge-Base}{\faGithub}
+%         }{Jan 2021 \(-\) Present \(\cdot\) 2 yrs 6 mos}{}{}
+%         \item Compilation of papers and notes in machine learning with a focus on \textbf{CNN}, \textbf{Transformer}, \textbf{GAN}, and \textbf{diffusion models}. Other topics include \textbf{multi-task learning}, \textbf{XAI}, and \textbf{NERF}.
+%     \end{rSubsection}
+
+% \end{rSection}
 
 \begin{rSection}{Education}
 
-    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 - Present \(\cdot\) 3 yrs 9 mos}{}{}
+    \begin{rSubsection}{University of Waterloo, Canada}{Sep 2019 \(-\) Present \(\cdot\) 3 yrs 10 mos}{}{}
         \item Triple major in \textbf{Computer Science}, \textbf{Statistics}, and \textbf{Optimization} with faculty average \(\sim\)93\%.
         % \item Relevant courses: machine learning, computational vision, algorithms, operating systems,
     \end{rSubsection}
